--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,80 +1,87 @@
-/* Login.css */
-
 body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Arial', sans-serif;
+}
+
+.login-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: linear-gradient(135deg, #f5af19, #f12711);
+  background-size: cover;
+  background-position: center;
+  width: 100vw; /* Asegura que el fondo cubra todo el ancho */
+  height: 100vh; /* Asegura que el fondo cubra toda la altura */
+  position: absolute; /* Para asegurar que cubra toda la pantalla */
+  top: 0;
+  left: 0;
+}
+
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.login-form {
+  background-color: white;
+  padding: 40px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  width: 400px; /* Aumentar el ancho del formulario */
+  opacity: 0;
+  transform: translateY(-20px);
+  animation: fadeInUp 1s forwards; /* Añadir animación */
+}
+
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
-  
-  .login-page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background: linear-gradient(135deg, #f5af19, #f12711);
-    background-size: cover;
-    background-position: center;
-    width: 100vw; /* Asegura que el fondo cubra todo el ancho */
-    height: 100vh; /* Asegura que el fondo cubra toda la altura */
-    position: absolute; /* Para asegurar que cubra toda la pantalla */
-    top: 0;
-    left: 0;
-  }
-  
-  .login-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .login-form {
-    background-color: white;
-    padding: 40px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    width: 400px; /* Aumentar el ancho del formulario */
-  }
-  
-  .login-form h2 {
-    margin-bottom: 20px;
-    color: #ff8c00;
-  }
-  
-  .login-form label {
-    display: block;
-    margin-bottom: 5px;
-    color: #333;
-  }
-  
-  .login-form input {
-    width: 100%;
-    padding: 12px; /* Aumentar el padding para mayor comodidad */
-    margin-bottom: 15px; /* Aumentar el margin-bottom para mayor separación */
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .login-form button {
-    padding: 12px 20px; /* Aumentar el padding del botón */
-    background-color: #ff8c00;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    width: 100%; /* Asegurarse de que el botón ocupe el ancho completo */
-  }
-  
-  .login-form button:hover {
-    background-color: #e67e00;
-  }
-  
-  .error {
-    color: red;
-    margin-bottom: 10px;
-  }
-  
+}
+
+.login-form h2 {
+  margin-bottom: 20px;
+  color: #ff8c00;
+}
+
+.login-form label {
+  display: block;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+.login-form input {
+  width: 100%;
+  padding: 12px; /* Aumentar el padding para mayor comodidad */
+  margin-bottom: 15px; /* Aumentar el margin-bottom para mayor separación */
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.login-form button {
+  padding: 12px 20px; /* Aumentar el padding del botón */
+  background-color: #ff8c00;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  width: 100%; /* Asegurarse de que el botón ocupe el ancho completo */
+}
+
+.login-form button:hover {
+  background-color: #e67e00;
+}
+
+.error {
+  color: red;
+  margin-bottom: 10px;
+}
